<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:layout_marginTop="50dp"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-thin"
                android:gravity="left|fill_vertical"
                android:text="@string/total_budget"
                android:textColor="#6A6A61"
                android:textSize="20sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="2dp"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif-thin"
                android:gravity="left|fill_vertical"
                android:text="@string/total_time_left"
                android:textColor="#6A6A61"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="1dp"
                        android:background="@color/accent_material_light"
                        android:gravity="center"
                        android:onClick="resetuj"
                        android:text="@string/reset"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTotalBudget"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textColor="#BFBFBF"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/etTimeLeft"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textColor="#BFBFBF"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:background="@color/accent_material_light"
                    android:gravity="center"
                    android:onClick="spocitejHodnotu"
                    android:text="@string/ok"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
