<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.71"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:textColor="#424242"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/currencySpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:layout_marginTop="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:textColor="#424242"
            android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:orientation="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:layout_weight="10"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="left|fill_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/expenditure"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:textColor="#BFBFBF"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:layout_weight="10"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="left|fill_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etPrice"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:textColor="#BFBFBF"
                    android:textSize="25sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:layout_weight="10"
                    android:background="#FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="left|fill_vertical"
                    android:paddingLeft="15dp"
                    android:text="@string/time"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/etTime"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="15dp"
                    android:layout_weight="10"
                    android:gravity="center"
                    android:textColor="#BFBFBF"
                    android:textSize="25sp" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/accent_material_light"
                    android:gravity="center"
                    android:onClick="saveItem"
                    android:text="@string/save"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>